docs/versioned_docs/version-0.10.0-rc2/get_started/configuration.md
---
description: Configure Commit-Boost
---

# Configuration

Commit-Boost needs a configuration file detailing all the services that you want to run. Create a `cb-config.toml` and modify it depending on which modules you plan to run.

- For a full explanation of all the fields, check out [here](https://github.com/Commit-Boost/commit-boost-client/blob/main/config.example.toml).
- For some additional examples on config presets, check out [here](https://github.com/Commit-Boost/commit-boost-client/tree/main/configs).

## Minimal PBS setup on Holesky

```toml
chain = "Holesky"

[pbs]
port = 18550

[[relays]]
url = ""

[metrics]
enabled = true
```

You can find a list of MEV-Boost Holesky relays [here](https://www.coincashew.com/coins/overview-eth/mev-boost/mev-relay-list#holesky-testnet-relays).
After the sidecar is started, it will expose a port (`18550` in this example), that you need to point your CL to. This may be different depending on which CL you're running, check out [here](https://docs.flashbots.net/flashbots-mev-boost/getting-started/system-requirements#consensus-client-configuration-guides) for a list of configuration guides.

:::note
In this setup, the Signer Service will not be started.
:::

## Signer Service

Commit-Boost supports both local and remote signers. The Signer Service is responsible for signing the transactions that other modules generates. Please note that only one signer at a time is allowed.

### Local signer

To start a local Signer Service, you need to include its parameters in the config file

```toml
[pbs]
...
with_signer = true

[signer]
port = 20000

[signer.local.loader]
format = "lighthouse"
keys_path = "/path/to/keys"
secrets_path = "/path/to.secrets"
```

We currently support Lighthouse, Prysm, Teku, Lodestar, and Nimbus's keystores so it's easier to load the keys. We're working on adding support for additional keystores. These are the expected file structures for each format:

<details>
  <summary>Lighthouse</summary>

#### File structure:

```
├── keys
│   ├── <PUBLIC_KEY_1>
│   │   └── voting-keystore.json
│   └── <PUBLIC_KEY_2>
│       └── voting-keystore.json
└── secrets
    ├── <PUBLIC_KEY_1>
    └── <PUBLIC_KEY_2>
```

#### Config:

```toml
[pbs]
...
with_signer = true

[signer]
port = 20000

[signer.local.loader]
format = "lighthouse"
keys_path = "keys"
secrets_path = "secrets"
```

</details>

<details>
  <summary>Prysm</summary>

#### File structure:

```
├── wallet
│   └── direct
│       └── accounts
│           └──all-accounts.keystore.json
└── secrets
    └── password.txt
```

#### Config:

```toml
[pbs]
...
with_signer = true

[signer]
port = 20000

[signer.local.loader]
format = "prysm"
keys_path = "wallet/direct/accounts/all-accounts.keystore.json"
secrets_path = "secrets/password.txt"
```

</details>

<details>
  <summary>Teku</summary>

#### File structure:

```
├── keys
│   ├── <PUBLIC_KEY_1>.json
│   └── <PUBLIC_KEY_2>.json
└── secrets
    ├── <PUBLIC_KEY_1>.txt
    └── <PUBLIC_KEY_2>.txt
```

#### Config:

```toml
[pbs]
...
with_signer = true

[signer]
port = 20000

[signer.local.loader]
format = "teku"
keys_path = "keys"
secrets_path = "secrets"
```

</details>

<details>
  <summary>Lodestar</summary>

#### File structure:

```
├── keys
│   ├── <PUBLIC_KEY_1>.json
│   └── <PUBLIC_KEY_2>.json
└── secrets
    └── password.txt
```

#### Config:

```toml
[pbs]
...
with_signer = true

[signer]
port = 20000

[signer.local.loader]
format = "lodestar"
keys_path = "keys"
secrets_path = "secrets/password.txt"
```

:::note
All keys have the same password stored in `secrets/password.txt`
:::

</details>

<details>
  <summary>Nimbus</summary>

  #### File structure:
  ```
  ├── keys
  │   ├── <PUBLIC_KEY_1>
  │   │   └── keystore.json
  │   └── <PUBLIC_KEY_2>
  │       └── keystore.json
  └── secrets
      ├── <PUBLIC_KEY_1>
      └── <PUBLIC_KEY_2>
  ```

  #### Config:
  ```toml
  [pbs]
  ...
  with_signer = true

  [signer]
  port = 20000

  [signer.local.loader]
  format = "nimbus"
  keys_path = "keys"
  secrets_path = "secrets"
  ```
</details>

### Proxy keys store

Proxy keys can be used to sign transactions with a different key than the one used to sign the block. Proxy keys are generated by the Signer Service and authorized by the validator key. Each module have their own proxy keys, that can be BLS or ECDSA.

To persist proxy keys across restarts, you must enable the proxy store in the config file. There are 2 options for this:

<details>
  <summary>File</summary>

The keys are stored in plain text in a file. This method is unsafe and should only be used for testing.

#### File structure

```
<proxy_dir>
└── <MODULE_ID>
      └── bls
          ├── <PROXY_PUBKEY1>
          └── <PROXY_PUBKEY2>
```

#### Configuration

```toml
[signer.local.store]
proxy_dir = "path/to/proxy_dir"
```

Where each `<PROXY_PUBKEY>` file contains the following:

```json
{
  "secret": "0x...",
  "delegation": {
    "message": {
      "delegator": "0x...",
      "proxy": "0x..."
    },
    "signature": "0x..."
  }
}
```

</details>

<details>
  <summary>ERC2335</summary>

The keys are stored in a ERC-2335 style keystore, along with a password. This way, you can safely share the keys directory as without the password they are useless.

#### File structure

```
├── <keys_path>
│   └── <CONSENSUS_PUBLIC_KEY>
│       └── <MODULE_ID>
│           ├── bls/
│           │   ├── <PROXY_PUBLIC_KEY1>.json
│           │   ├── <PROXY_PUBLIC_KEY1>.sig
│           │   ├── <PROXY_PUBLIC_KEY2>.json
│           │   └── <PROXY_PUBLIC_KEY2>.sig
│           └── ecdsa/
│               ├── <PROXY_PUBLIC_KEY3>.json
│               └── <PROXY_PUBLIC_KEY3>.sig
└── <secrets_path>
    └── <CONSENSUS_PUBLIC_KEY>
        └── <MODULE_ID>
            ├── bls/
            │   ├── <PROXY_PUBLIC_KEY1>
            │   └── <PROXY_PUBLIC_KEY2>
            └── ecdsa
                └── <PROXY_PUBLIC_KEY3>
```

#### Configuration

```toml
[signer.local.store]
keys_path = "path/to/keys"
secrets_path = "path/to/secrets"
```

Where the `<PROXY_PUBLIC_KEY>.json` files contain ERC-2335 keystore, the `<PROXY_PUBLIC_KEY>.sig` files contain the signature of the delegation, and `<PROXY_PUBLIC_KEY>` files contain the password to decrypt the keystores.

</details>

### Remote signer

You might choose to use an external service to sign the transactions. For now, two types of remote signers are supported: Web3Signer and Dirk.

#### Web3Signer

Web3Signer implements the same API as Commit-Boost, so there's no need to set up a Signer Service. The parameters needed for the remote signer are:

```toml
[signer.remote]
url = "https://remote.signer.url"
```

#### Dirk

Dirk is a distributed key management system that can be used to sign transactions. In this case the Signer Service is needed as an intermediary between the modules and Dirk. The following parameters are needed:

```toml
[signer.dirk]
cert_path = "/path/to/client.crt"
key_path = "/path/to/client.key"
secrets_path = "/path/to/secrets"
# Optional parameters
ca_cert_path = "/path/to/ca.crt"
max_response_size_bytes = "4194304"

# Add one entry like this for each host
[[signer.dirk.hosts]]
server_name = "localhost-1"
url = "https://localhost-1:8081"
wallets = ["SomeWallet", "DistributedWallet"]

[[signer.dirk.hosts]]
server_name = "localhost-2"
url = "https://localhost-2:8082"
wallets = ["AnotherWallet", "DistributedWallet"]
```

- `cert_path` and `key_path` are the paths to the client certificate and key used to authenticate with Dirk.
- `wallets` is a list of wallets from which the Signer Service will load all accounts as consensus keys. Generated proxy keys will have format `<WALLET_NAME>/<ACCOUNT>/<MODULE_ID>/<UUID>`, so accounts found with that pattern will be ignored.
- `secrets_path` is the path to the folder containing the passwords of the generated proxy accounts, which will be stored in `<secrets_path>/<WALLET_NAME>/<ACCOUNT>/<MODULE_ID>/<UUID>.pass`.

Additionally, you can set a proxy store so that the delegation signatures for generated proxy keys are stored locally. As these signatures are not sensitive, the only supported store type is `File`:

```toml
[signer.dirk.store]
proxy_dir = "/path/to/proxy_dir"
```

Delegation signatures will be stored in files with the format `<proxy_dir>/delegations/<MODULE_ID>/<PROXY_KEY>.sig`.

A full example of a config file with Dirk can be found [here](https://github.com/Commit-Boost/commit-boost-client/blob/main/examples/configs/dirk_signer.toml).


### TLS

By default, the Signer service runs in **insecure** mode, so its API service uses HTTP without any TLS encryption. This is sufficient for testing or if you're running locally within your machine's isolated Docker network and only intend to access it within the confines of your machine. However, for larger production setups, it's recommended to enable TLS - especially for traffic that spans across multiple machines.

The Signer service in TLS mode supports **TLS 1.2** and **TLS 1.3**. Older protocol versions are not supported.

To enable TLS, you must first create a **certificate / key pair**. We **strongly advise** using a well-known Certificate Authority to create and sign the certificate, such as [Let's Encrypt](https://letsencrypt.org/getting-started/) (a free service) or [Bluehost](https://www.bluehost.com/help/article/how-to-set-up-an-ssl-certificate-for-website-security) (free but requires an account). We do not recommend using a self-signed ceriticate / key pair for production environments.

When configuring TLS support, the Signer service expects a single folder (which you can specify) that contains the following two files:
- `cert.pem`: The SSL certificate file signed by a certificate authority, in PEM format
- `key.pem`: The private key corresponding to `cert.pem` that will be used for signing TLS traffic, in PEM format

Specifying it is done within Commit-Boost's configuration file using the `[signer.tls_mode]` table as follows:

```toml
[pbs]
...
with_signer = true

[signer]
port = 20000
...

[signer.tls_mode]
type = "certificate"
path = "path/to/your/cert/folder"
```

Where `path` is the aforementioned folder. It defaults to `./certs` but can be replaced with whichever directory your certificate and private key file reside in, as long as they're readable by the Signer service (or its Docker container, if using Docker).

### Rate limit

The Signer service implements a rate limit system of 3 failed authentications every 5 minutes. These values can be modified in the config file:

```toml
[signer]
...
jwt_auth_fail_limit = 3 # The amount of failed requests allowed
jwt_auth_fail_timeout_seconds = 300 # The time window in seconds
```

The rate limit is applied to the IP address of the client making the request. By default, the IP is extracted directly from the TCP connection. If you're running the Signer service behind a reverse proxy (e.g. Nginx), you can configure it to extract the IP from a custom HTTP header instead. There're two options:

- unique: Provides an HTTP header that contains the IP. This header is expected to appear only once in the request. This is common when using `X-Real-IP`, `True-Client-IP`, etc. If a request has multiple values for this header, it will be considered invalid and rejected.
- `rightmost`: Provides an HTTP header that contains a comma-separated list of IPs. The nth rightmost IP in the list is used. If the header appears multiple times, the last occurrence is used. This is common when using `X-Forwarded-For`.

Examples:

```toml
[signer.reverse_proxy]
type = "unique"
header = "X-Real-IP"
```

```toml
[signer.reverse_proxy]
type = "rightmost"
header = "X-Forwarded-For"
trusted_count = 1
```

Note: `trusted_count` is the number of trusted proxies in front of the Signer service, but the last proxy won't add its address, so the number of skipped IPs is `trusted_count - 1`. See [MDN docs](https://developer.mozilla.org/en-US/docs/Web/HTTP/Reference/Headers/X-Forwarded-For#trusted_proxy_count) for more info.

## Custom module

We currently provide a test module that needs to be built locally. To build the module run:

```bash
just docker-build-test-modules
```

:::note
We use `just` as command runner. If you don't have it installed, either install it from https://github.com/casey/just or run the commands manually from the `justfile` at the root of the repo.
:::

This will create a Docker image called `test_da_commit` that periodically requests signatures from the validator.

The `cb-config.toml` file needs to be updated as follows:

```toml
[pbs]
port = 18550

[[relays]]
url = ""

[signer]
port = 20000

[signer.loader]
format = "lighthouse"
keys_path = "/path/to/keys"
secrets_path = "/path/to.secrets"

[metrics]
enabled = true

[[modules]]
id = "DA_COMMIT"
type = "commit"
docker_image = "test_da_commit"
signing_id = "0x6a33a23ef26a4836979edff86c493a69b26ccf0b4a16491a815a13787657431b"
sleep_secs = 5
```

A few things to note:

- We now added a `signer` section which will be used to create the Signer Service.
- There is now a `[[modules]]` section which at a minimum needs to specify the module `id`, `type` and `docker_image`. For modules with type `commit`, which will be used to access the Signer service and request signatures for preconfs, you will also need to specify the module's unique `signing_id` (see [the propser commitment documentation](../developing/prop-commit-signing.md)). Additional parameters needed for the business logic of the module will also be here.

To learn more about developing modules, check out [here](../developing/custom-modules).


## Vouch

[Vouch](https://github.com/attestantio/vouch) is a multi-node validator client built by [Attestant](https://www.attestant.io/). Vouch is particular in that it also integrates an MEV-Boost client to interact with relays. The Commit-Boost PBS Service is compatible with the Vouch `blockrelay` since it implements the same Builder-API as relays. For example, depending on your setup and preference, you may want to fetch headers from a given relay using Commit-Boost vs using the built-in Vouch `blockrelay`.

### Configuration

Get familiar on how to set up Vouch [here](https://github.com/attestantio/vouch/blob/master/docs/getting_started.md).

You can setup Commit-Boost with Vouch in two ways.
For simplicity, assume that in Vouch `blockrelay.listen-address: 127.0.0.0:19550` and in Commit-Boost `pbs.port = 18550`.

#### Beacon Node to Vouch

In this setup, the BN Builder-API endpoint will be pointing to the Vouch `blockrelay` (e.g. for Lighthouse you will need the flag `--builder=http://127.0.0.0:19550`).

Modify the `blockrelay.config` file to add Commit-Boost:

```json
"relays": {
    "http://127.0.0.0:18550": {}
}
```

#### Beacon Node to Commit-Boost

In this setup, the BN Builder-API endpoint will be pointing to the PBS Service (e.g. for Lighthouse you will need the flag `--builder=http://127.0.0.0:18550`).

This will bypass the `blockrelay` entirely so make sure all relays are properly configured in the `[[relays]]` section.

:::note
This approach could also work if you have a multi-beacon-node setup, where some BNs fetch directly via Commit-Boost while others go through the `blockrelay`.
:::

### Notes

- It's up to you to decide which relays will be connected via Commit-Boost (`[[relays]]` section in the `toml` config) and which via Vouch (additional entries in the `relays` field). Remember that any rate-limit will be shared across the two sidecars, if running on the same machine.
- You may occasionally see a `timeout` error during registrations, especially if you're running a large number of validators in the same instance. This can resolve itself as registrations will be cleared later in the epoch when relays are less busy processing other registrations. Alternatively you can also adjust the `builderclient.timeout` option in `.vouch.yml`.

## Hot Reload

Commit-Boost supports hot-reloading the configuration file. This means that you can modify the `cb-config.toml` file and apply the changes without needing to restart the modules. To do this, you need to send a `POST` request to the `/reload` endpoint on each module you want to reload the configuration. In the case the module is running in a Docker container without the port exposed (like the signer), you can use the following command:

```bash
docker compose -f cb.docker-compose.yml exec cb_signer curl -X POST http://localhost:20000/reload
```

### Signer Service reload

When the signer receives a reload request it re-reads the configuration file and environment variables, rebuilding its internal state to match:

- **New modules** added to the config are registered with the signer.
- **Removed modules** are dropped from the signer's access list.
- **JWT secrets and admin secret** are reset to their current values from the environment variables.
- Any runtime changes from previous `/revoke_jwt` or `/reload` calls are reverted.

The request body accepts 2 optional override parameters, applied on top of the config:

- `jwt_secrets`: a comma-separated list of `<MODULE_ID>=<JWT_SECRET>` pairs to override specific module secrets. Only modules present in the config can be overridden.
- `admin_secret`: a string to override the admin JWT secret.

If the body is empty, the signer state is simply synced to match the config.

#### Common patterns

**Add a new module without restarting:**
1. Add the `[[modules]]` entry to `cb-config.toml`.
2. Set the new module's JWT secret in the signer's environment (`CB_SIGNER_JWT_SECRETS`).
3. Send `POST /reload` with an empty body. The signer picks up the new module from config.
4. Start the new module container with the matching JWT secret.

**Rotate a JWT secret remotely:**
Send `POST /reload` with the new secret in the body. The module must already exist in the config. This is useful for scripted rotation without SSH access to edit config files.

**Revoke a compromised module immediately:**
Send `POST /revoke_jwt` with the module ID. This removes the module from the signer's access list without touching the config. The next `/reload` will restore the module if it is still in the config, so remove it from config as well if the revocation should be permanent.

#### Footguns

- **Body overrides are not persisted.** If the signer crashes or restarts after a body-based secret rotation, it falls back to the config/environment values. The module container will still have the rotated secret and authentication will fail. To avoid this, update the environment variable to match after rotating via the body.
- **Reload reverts revocations.** If you revoke a module with `/revoke_jwt` but leave it in the config, the next `/reload` without a body override will re-add it from the config baseline. Always remove revoked modules from the config to make the revocation permanent.
- **Override validation is strict.** If the body references a module ID that does not exist in the config, the entire reload request is rejected and no changes are applied. This prevents typos from silently failing.

### Notes

- The hot reload feature is available for PBS Service (both default and custom) and Signer Service.
- Changes related to listening hosts and ports will not been applied, as it requires the server to be restarted.
- If running in Docker containers, changes in `volumes` will not be applied, as it requires the container to be recreated. Be careful if changing a path to a local file as it may not be accessible from the container.
- Custom PBS Service may override the default behaviour of the hot reload feature to parse extra configuration fields. Check the [examples](https://github.com/Commit-Boost/commit-boost-client/blob/main/examples/status_api/src/main.rs) for more details.
- In case the reload fails (most likely because of some misconfigured option), the server will return a 500 error and the previous configuration will be kept.
